--- a/bar/00_meta/00_manifest.json
+++ b/bar/00_meta/00_manifest.json
@@ -1,6 +1,6 @@
 {
   "bar_version": "1",
-  "box_version": "1",
-  "DefaultPath": "HomeApplication",
+  "box_version": "1.1",
+  "DefaultPath": "home",
   "schema": "https://demo.personium.io/HomeApplication/"
 }
