--- a/bar/00_meta/00_manifest.json
+++ b/bar/00_meta/00_manifest.json
@@ -2,5 +2,5 @@
   "bar_version": "1",
   "box_version": "1.1",
   "DefaultPath": "home",
-  "schema": "https://demo.personium.io/HomeApplication/"
+  "schema": "https://demo.personium.io/app-cc-home/"
 }
