update build scripts

--- a/nginx-app-cc-home.conf
+++ b/nginx-app-cc-home.conf
@@ -2,6 +2,7 @@ server {
   listen  80 default_server;
 
   location /__/ {
+    add_header Access-Control-Allow-Origin '*' always;
     alias /opt/dst/app-cc-home/;
   }
 
